[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/images/grid.png" type="Texture" id=1]
[ext_resource path="res://utility/Spot.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/Board.gd" type="Script" id=3]
[ext_resource path="res://assets/images/o_texture.png" type="Texture" id=4]
[ext_resource path="res://assets/images/x_texture.png" type="Texture" id=5]
[ext_resource path="res://assets/images/background.png" type="Texture" id=6]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/Minecraft/Minecraft.ttf"

[sub_resource type="DynamicFont" id=2]
size = 42
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/fonts/Minecraft/Minecraft.ttf"

[sub_resource type="DynamicFont" id=4]
size = 32
extra_spacing_top = 24
extra_spacing_bottom = 12
font_data = SubResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.45098, 0.121569, 0.478431, 1 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://assets/fonts/Minecraft/Minecraft.ttf"

[sub_resource type="DynamicFont" id=7]
size = 26
extra_spacing_top = 15
extra_spacing_space = 5
font_data = SubResource( 6 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.396078, 0.0705882, 0.431373, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.560784, 0.211765, 0.6, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.45098, 0.121569, 0.478431, 1 )

[sub_resource type="DynamicFontData" id=11]
font_path = "res://assets/fonts/Minecraft/Minecraft.ttf"

[sub_resource type="DynamicFont" id=12]
size = 30
extra_spacing_top = 3
font_data = SubResource( 11 )

[node name="Board" type="Node2D"]
script = ExtResource( 3 )
o_texture = ExtResource( 4 )
x_texture = ExtResource( 5 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 968, 544 )
scale = Vector2( 2.78857, 2.84987 )
texture = ExtResource( 6 )

[node name="Clickable" type="Node2D" parent="."]
position = Vector2( 424, 0 )

[node name="Spot1" parent="Clickable" instance=ExtResource( 2 )]
position = Vector2( 640, 200 )

[node name="Spot2" parent="Clickable" instance=ExtResource( 2 )]
position = Vector2( 928, 200 )

[node name="Spot3" parent="Clickable" instance=ExtResource( 2 )]
position = Vector2( 1208, 200 )

[node name="Spot4" parent="Clickable" instance=ExtResource( 2 )]
position = Vector2( 640, 496 )

[node name="Spot5" parent="Clickable" instance=ExtResource( 2 )]
position = Vector2( 926, 486 )

[node name="Spot6" parent="Clickable" instance=ExtResource( 2 )]
position = Vector2( 1208, 480 )

[node name="Spot7" parent="Clickable" instance=ExtResource( 2 )]
position = Vector2( 640, 784 )

[node name="Spot8" parent="Clickable" instance=ExtResource( 2 )]
position = Vector2( 928, 784 )

[node name="Spot9" parent="Clickable" instance=ExtResource( 2 )]
position = Vector2( 1209, 784 )

[node name="Grid" type="Sprite" parent="."]
position = Vector2( 1352, 512 )
scale = Vector2( 2.14857, 2.41476 )
texture = ExtResource( 1 )
region_rect = Rect2( 261, 11, 44, 130 )

[node name="Rounds" type="Label" parent="."]
margin_left = 64.0
margin_top = 64.0
margin_right = 744.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.929412, 0.952941, 0.196078, 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chat" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BGChat" type="Sprite" parent="Chat"]
modulate = Color( 0.741176, 0.160784, 0.501961, 1 )
position = Vector2( 404, 480 )
scale = Vector2( 0.971429, 1.46565 )
texture = ExtResource( 6 )

[node name="ChatText" type="RichTextLabel" parent="Chat"]
margin_left = 88.0
margin_top = 192.0
margin_right = 744.0
margin_bottom = 768.0
custom_fonts/normal_font = SubResource( 4 )
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextMsg" type="TextEdit" parent="Chat"]
margin_left = 64.0
margin_top = 800.0
margin_right = 632.0
margin_bottom = 864.0
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 7 )
custom_colors/caret_color = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SendBtn" type="Button" parent="Chat"]
margin_left = 648.0
margin_top = 800.0
margin_right = 744.0
margin_bottom = 864.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 12 )
text = "Invia"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="visibility_changed" from="." to="." method="_on_Board_visibility_changed"]
[connection signal="input_event" from="Clickable/Spot1" to="." method="_on_Spot_input_event"]
[connection signal="input_event" from="Clickable/Spot2" to="." method="_on_Spot2_input_event"]
[connection signal="input_event" from="Clickable/Spot3" to="." method="_on_Spot3_input_event"]
[connection signal="input_event" from="Clickable/Spot4" to="." method="_on_Spot4_input_event"]
[connection signal="input_event" from="Clickable/Spot5" to="." method="_on_Spot5_input_event"]
[connection signal="input_event" from="Clickable/Spot6" to="." method="_on_Spot6_input_event"]
[connection signal="input_event" from="Clickable/Spot7" to="." method="_on_Spot7_input_event"]
[connection signal="input_event" from="Clickable/Spot8" to="." method="_on_Spot8_input_event"]
[connection signal="input_event" from="Clickable/Spot9" to="." method="_on_Spot9_input_event"]
[connection signal="pressed" from="Chat/SendBtn" to="." method="_on_SendBtn_pressed"]
